--- a/robotarm jaar 2/Opdracht6.html
+++ b/robotarm jaar 2/Opdracht6.html
@@ -5,7 +5,7 @@
 <script>
     var canvas = document.getElementById("canvas");
     var robotArm = new RobotArm(canvas);
-    robotArm.speed = 1203123;
+    robotArm.speed = 500;
 
     robotArm.loadLevel("exercise 7");
 
