--- a/robotarm jaar 2/Opdracht4.html
+++ b/robotarm jaar 2/Opdracht4.html
@@ -8,14 +8,33 @@
 
     robotArm.loadLevel("exercise 4");
 
+        robotArm.grab();
+        robotArm.moveRight();
+        robotArm.moveRight();
+        robotArm.drop();
 
-    robotArm.grab();robotArm.moveRight();robotArm.moveRight();robotArm.drop();
+    for (var r = 0; r < 2; r++) {
+        robotArm.moveLeft();
+        robotArm.moveLeft();
+        robotArm.grab();
+        robotArm.moveRight();
+        robotArm.moveRight();
+        robotArm.drop();
+    }
+    for (var i = 0; i < 3; i++) {
+        robotArm.grab();
+        robotArm.moveLeft();
+        robotArm.drop();
+        robotArm.moveRight();
+    }
+
+    /*robotArm.grab();robotArm.moveRight();robotArm.moveRight();robotArm.drop();
     robotArm.moveLeft();robotArm.moveLeft();robotArm.grab();robotArm.moveRight();robotArm.moveRight();robotArm.drop();
     robotArm.moveLeft();robotArm.moveLeft();robotArm.grab();robotArm.moveRight();robotArm.drop();
     robotArm.moveLeft();robotArm.grab();robotArm.moveRight();robotArm.drop();
     robotArm.moveRight();robotArm.grab();robotArm.moveLeft();robotArm.drop();
     robotArm.moveRight();robotArm.grab();robotArm.moveLeft();robotArm.drop();
-    robotArm.speed = 9999;
+    robotArm.speed = 500;*/
     // Je eigen code plaats je hier.
 
     robotArm.run();
